Make sure ascii doesn't wrap

--- a/css/ascii.css
+++ b/css/ascii.css
@@ -3,11 +3,20 @@ body {
 }
 
 .ascii {
+  display: flex;
   flex-wrap: nowrap;
-  overflow: hidden;
+  width: 100%;
+  overflow-x: scroll;
+  overflow-y: hidden;
   font-family: "Courier New", monospace;
   font-weight: bold;
   text-align: center;
+}
+
+@media (max-width: 900px) {
+  .ascii {
+    justify-content: center;
+  }
 }
 
 .ascii.dark .ascii-column {
