--- a/css/main.css
+++ b/css/main.css
@@ -115,23 +115,61 @@ figure {
   width: 100%;
   max-width: 650px;
   margin: auto;
-  padding: 0 10px;
+  padding: 0 20px;
 }
 
 .container--medium {
   max-width: 800px;
 }
 
-.container.wide {
-  max-width: 1100px;
-  padding: 25px;
+.container--wide {
+  max-width: 1000px;
+}
+
+.columns {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.col {
+  flex-basis: 100%;
+  width: 100%;
+}
+
+.col:not(:last-child) {
+  margin: 0 0 20px 0;
+}
+
+@media (min-width: 1000px) {
+  .columns {
+    flex-wrap: nowrap;
+  }
+
+  .col:not(:last-child) {
+    margin: 0 40px 0 0;
+  }
+
+  .col-2-5 {
+    flex-basis: 40%;
+  }
+
+  .col-3-5 {
+    flex-basis: 60%;
+  }
+
+  .col-1-3 {
+    flex-basis: 33%;
+  }
+
+  .col-2-3 {
+    flex-basis: 66%;
+  }
 }
 
 .ascii-container {
   position: absolute;
   left: 0;
   top: 0;
-  text-align: center;
   width: 100vw;
   height: 100vh;
   z-index: 3;
